<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/splash_background"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/buscar_background"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <EditText
                android:id="@+id/editTextNroAfiliado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:layout_marginBottom="20dp"
                android:hint="@string/hint_numero_afiliado"
                android:inputType="number"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editTextCelular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_numero_telefono"
                android:inputType="number"
                android:singleLine="true"
                android:layout_marginBottom="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <RadioGroup
                android:id="@+id/radioSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="@string/tagMasculino"
                    android:text="@string/label_masculino" />

                <RadioButton
                    android:id="@+id/radioFemenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tagFemenino"
                    android:text="@string/label_femenino" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonGuardar"
                style="@style/ButtonBlueAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton_ingresar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>