<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ar.com.osdepym.mobile.cartilla.PrincipalActivity"
    tools:ignore="MergeRootFrame" >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ar.com.osdepym.mobile.cartilla.PrincipalActivity"
        tools:ignore="MergeRootFrame" >

        <Button
            android:id="@+id/botonResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado_busqueda"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/datosPrestadorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingLeft="@dimen/activity_horizontal_padding"
            android:paddingRight="@dimen/activity_horizontal_padding"
            android:paddingTop="@dimen/activity_vertical_padding" >

            <TextView
                android:id="@+id/textNombrePrestador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejemploNombrePrestador"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textoSuperiorLista" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
	            <TextView
	                android:id="@+id/textEspecialidadPrestador"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:singleLine="true"
	                android:paddingRight="15dp"
	                android:text="@string/ejemploEspecialidadPrestador" />
	            
	            <ImageButton
		            android:id="@+id/ver_mas"
		            android:layout_width="18dp"
		            android:layout_height="20dp"
		            android:layout_alignRight="@+id/textEspecialidadPrestador"
		            android:layout_alignBottom="@+id/textEspecialidadPrestador"
		            android:background="@drawable/arrow_down"
		            android:contentDescription="@string/ver_mas"
		            android:clickable="true" />
	            
	            <ImageButton
		            android:id="@+id/ocultar"
		            android:layout_width="18dp"
		            android:layout_height="20dp"
		            android:layout_alignRight="@+id/textEspecialidadPrestador"
		            android:layout_alignBottom="@+id/textEspecialidadPrestador"
		            android:background="@drawable/arrow_up"
		            android:contentDescription="@string/ocultar"
		            android:clickable="true"
		            android:visibility="gone"/>
                
            </RelativeLayout>

            <TextView
                android:id="@+id/textDireccionPrestador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejemploDireccionPrestador" />

            <TableRow
                android:id="@+id/telefonoCodigoPostalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_padding"
                android:paddingTop="@dimen/activity_vertical_padding" >

                <TextView
                    android:id="@+id/textTelefonoPrestador"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ejemploTelefonoPrestador" />

                <TextView
                    android:id="@+id/textCodigoPostalPrestador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="@dimen/activity_horizontal_padding"
                    android:text="@string/ejemploCodigoPostalPrestador" />
            </TableRow>

            <TableRow
                android:id="@+id/botonesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/botonLlamarPrestador"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:onClick="llamarPrestador"
                    android:text="@string/boton_llamar"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse" />

                <Button
                    android:id="@+id/botonConsultarHorarios"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:onClick="verHorarios"
                    android:text="@string/boton_horarios"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse" />

                <Button
                    android:id="@+id/botonComoLlegar"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:onClick="comoLlegar"
                    android:text="@string/boton_como_llegar"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse" />
            </TableRow>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descripcionImagenDivider"
            android:scaleType="fitXY"
            android:src="@drawable/divider_list" />

        <LinearLayout
            android:id="@+id/layoutMapFragment"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </fragment>
        </LinearLayout>

        <TextView
            android:id="@+id/textSinGeoref"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/texto_sin_georeferencia"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textoSinGeoreferencia" />
    </LinearLayout>

</LinearLayout>