<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ar.com.osdepym.mobile.cartilla.PrincipalActivity"
    tools:ignore="MergeRootFrame" >

    <include
        android:id="@+id/include1"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/layoutBusqueda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_background"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <Button
            android:id="@+id/buttonBusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_busqueda" />

        <Button
            android:id="@+id/buttonBuscarPorEspecialidad"
            style="@style/ButtonArrowAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/boton_buscar_por_especialidad" />

        <Button
            android:id="@+id/buttonBuscarPorNombre"
            style="@style/ButtonArrowAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_buscar_por_nombre" />

        <Button
            android:id="@+id/buttonBuscarPorCercania"
            style="@style/ButtonArrowAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_buscar_por_cercania" />
    </LinearLayout>

</LinearLayout>